src/test/ui/pattern/usefulness/doc-hidden-fields.stderr
error: pattern requires `..` due to inaccessible fields
  --> $DIR/doc-hidden-fields.rs:8:9
   |
LL |     let HiddenStruct { one, two, } = HiddenStruct::default();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: ignore the inaccessible and unused fields
   |
LL |     let HiddenStruct { one, two, .., } = HiddenStruct::default();
   |                                ++++

error[E0027]: pattern does not mention field `two` and inaccessible fields
  --> $DIR/doc-hidden-fields.rs:11:9
   |
LL |     let HiddenStruct { one, } = HiddenStruct::default();
   |         ^^^^^^^^^^^^^^^^^^^^^ missing field `two` and inaccessible fields
   |
help: include the missing field in the pattern and ignore the inaccessible fields
   |
LL |     let HiddenStruct { one, two, .. } = HiddenStruct::default();
   |                           ~~~~~~~~~~~
help: if you don't care about this missing field, you can explicitly ignore it
   |
LL |     let HiddenStruct { one, .. } = HiddenStruct::default();
   |                           ~~~~~~

error[E0027]: pattern does not mention field `two`
  --> $DIR/doc-hidden-fields.rs:14:9
   |
LL |     let HiddenStruct { one, hide } = HiddenStruct::default();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing field `two`
   |
help: include the missing field in the pattern
   |
LL |     let HiddenStruct { one, hide, two } = HiddenStruct::default();
   |                                 ~~~~~~~
help: if you don't care about this missing field, you can explicitly ignore it
   |
LL |     let HiddenStruct { one, hide, .. } = HiddenStruct::default();
   |                                 ~~~~~~

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0027`.
